# jornada-python-hashtag

aula01/: pyproject.toml  record_datees.py
aula02/: analise_dados.ipynb  pyproject.toml
aula03/: analise_score_clientes.ipynb  pyproject.toml
aula04/: main.py  pyproject.toml
