[project]
name = "aula02"
version = "0.1.0"
description = ""
authors = [
    {name = "ds-borges",email = "diego97sousa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython (>=9.5.0,<10.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

